--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
           <h3 class="float-md-start mb-0">Bella Corporation</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">Funcionalidades</a>
+            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#">Sobre Nosotros</a>
+            <a class="nav-link" href="#">FAQ</a>
           </nav>
         </div>
       </header>
@@ -54,8 +56,11 @@
       <main class="px-3">
         <h1>Bella Corporation S.L.</h1>
         <p class="lead">
-          Proveedora de productos para farmacias de Australia y una empresa constructora en Puerto Rico, con experiencia en el abastecimiento de insumos especializados y la gestión de proyectos de gran escala.
-Ambas líneas de negocio se distinguen por su enfoque en la calidad, la eficiencia operativa y el cumplimiento de estándares internacionales.
+          Proveedora de productos para farmacias de Australia y una empresa
+          constructora en Puerto Rico, con experiencia en el abastecimiento de
+          insumos especializados y la gestión de proyectos de gran escala. Ambas
+          líneas de negocio se distinguen por su enfoque en la calidad, la
+          eficiencia operativa y el cumplimiento de estándares internacionales.
         </p>
         <p class="lead">
           <a
@@ -74,26 +79,5 @@ Ambas líneas de negocio se distinguen por su enfoque en la calidad, la eficienc
         </p>
       </footer>
     </div>
-<<<<<<< HEAD
-=======
-  </header>
-
-  <main class="px-3">
-    <h1>Bella Corporation</h1>
-    <p class="lead">Proveedora de productos para farmacias de Australia y una empresa constructora en Puerto Rico, con experiencia en el abastecimiento de insumos especializados y la gestión de proyectos de gran escala.
-      Ambas líneas de negocio se distinguen por su enfoque en la calidad, la eficiencia operativa y el cumplimiento de estándares internacionales.</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-    </p>
-  </main>
-
-  <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-  </footer>
-</div>
-
-
-    
->>>>>>> 0380fe2 (index.html description modified)
   </body>
 </html>
